--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.github.ammar257ammar.rml</groupId>
-  <artifactId>rmlmapper-functions</artifactId>
+  <groupId>io.github.ammar257ammar</groupId>
+  <artifactId>fair-enm-rmlmapper-functions</artifactId>
   <version>1.0-Stable</version>
   <name>RMLMapperHelperFunctions</name>
   
@@ -12,6 +12,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
 	<maven.compiler.target>1.8</maven.compiler.target>
+	<java.version>1.8</java.version>
   </properties>
   
   <build>
